[package]
name = "amm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.11.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
thiserror = "2.0.19"

[features]
default = ["perf"]
perf = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
