[package]
name = "amm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.11.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
thiserror = "2.0.19"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve" }
pinocchio-associated-token-account = "0.4.0"

[features]
default = ["perf"]
perf = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
litesvm = "0.15.0"
solana-account = "4.3.1"
solana-address = "2.6.1"
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-message = "4.4.0"
solana-signer = "3.0.1"
solana-system-interface = "3.2.0"
solana-transaction = "4.1.5"
spl-associated-token-account-client = "2.0.0"
spl-token = "9.0.0"
